Adding Updated post and get requests

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "alexcvzz.vscode-sqlite",
-        "ms-python.python"
+        "ms-python.python",
+        "oleg-shilo.cs-script"
     ]
 }
